# resume-ATS-matcher

./: .dockerignore  .gitignore  AGENTS.md  CLAUDE.md  README.md  ROADMAP.md  app.py  docker-compose.yml  pyproject.toml  todo.md
backend/: Dockerfile  main.py  routers.py  stores.py
config/: custom_skills.yaml  lightcast_skills.json  mcf_skills.json  onet_skills.json  rewrite_llm.yaml  skill_extraction.yaml
db/: connection.py  migrate.py  writer.py
docs/: api-contract.md  architecture.md  db-schema.md  research_rewrite_fe_feasibility.md  research_rewrite_ux.md  test_extraction_comparison.md
frontend/: Dockerfile  index.html  nginx.conf  nginx.conf.template  package-lock.json  package.json
frontend/src/: App.css  App.jsx  api.js
frontend/src/components/: KeywordPanel.jsx  Step1Upload.jsx  Step2JD.jsx  Step3Coverage.jsx  Step4Edit.jsx  Step4Review.jsx  Step4ReviewLegacy.jsx  Step5Export.jsx  SuggestionCard.jsx
pages/: 2_Rewrite.py
scripts/: build_mcf_dict.py  compare_extraction.py  eval_jd_parser.py  expand_mcf_plurals.py  extract_legitimate_jobbert.py  fetch_jds.py  mcf_keywords.txt
src/ats_matcher/: embedding_engine.py  exporter.py  jd_parser.py  matching_engine.py  models.py  pdf_exporter.py  phrase_ranker.py  resume_parser.py  rewrite_engine.py  utils.py
src/ats_matcher/nlp/: __init__.py  esco.py  skill_config.py
src/ats_matcher/render/: __init__.py  pdf_resume.py  rewrite_utils.py
tests/: test_jd_parser.py  test_matching_engine.py  test_resume_parser.py  test_rewrite_engine.py  test_rewrite_utils.py
