[project]
name = "resume-ats-matcher"
version = "0.1.0"
description = "Human-in-the-loop resume ATS matcher and editor"
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "beautifulsoup4>=4.12.3",
    "en-core-web-sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.7.1/en_core_web_sm-3.7.1-py3-none-any.whl",
    "numpy>=1.26.4,<2.0",
    "pandas>=2.2.2",
    "pyyaml>=6.0.0",
    "python-docx>=1.1.2",
    "reportlab>=4.2.2",
    "requests>=2.32.3",
    "sentence-transformers>=3.0.1",
    "scikit-learn>=1.5.1",
    "spacy>=3.7.5",
    "streamlit>=1.36.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
